# akwf_synth

./: .gitignore  .gitmodules  README.md  main.py  oscillator.py  pyproject.toml  run_synth.sh
scripts/: main.py
src/akwf_synth/: audio.py  config.py  events.py  oscillator.py  synth.py  wavetable.py
src/akwf_synth/input/: keyboard.py
src/loaders/: wav_loader.py
